feat: 添加获取用户信息接口及相关服务
